--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎯 ระบบจัดการลูกหนี้ V.16 (Calendar View)</title>
+    <title>🎯 ระบบจัดการลูกหนี้ V.16.1 (Calendar Modal Fix)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
@@ -181,7 +181,7 @@
         <header class="gradient-bg text-white shadow-lg sticky top-0 z-40">
             <div class="container mx-auto px-4 py-3 flex justify-between items-center">
                 <div class="flex items-center">
-                    <h1 class="text-xl md:text-2xl font-bold">🎯 ระบบจัดการลูกหนี้ V.16</h1>
+                    <h1 class="text-xl md:text-2xl font-bold">🎯 ระบบจัดการลูกหนี้ V.16.1</h1>
                     <div id="global-sync-status" class="ml-3"></div>
                 </div>
                 <div class="relative">
@@ -719,7 +719,6 @@
                     <div class="flex items-center"><span class="w-3 h-3 rounded-full bg-red-500 mr-2"></span><span>วันครบกำหนด</span></div>
                     <div class="flex items-center"><span class="w-3 h-3 rounded-full bg-blue-500 mr-2"></span><span>รอบชำระดอกเบี้ย</span></div>
                 </div>
-                <div id="calendar-popover" class="absolute z-10 bg-white p-3 rounded-lg shadow-lg border hidden w-64"></div>
             `;
             return calendarHtml;
         };
@@ -1644,32 +1643,32 @@
                     state.calendarDate.setMonth(state.calendarDate.getMonth() + 1);
                     render();
                 });
-                document.querySelectorAll('.calendar-day-event').forEach(dayEl => {
+                 document.querySelectorAll('.calendar-day-event').forEach(dayEl => {
                     dayEl.addEventListener('click', (e) => {
-                        const popover = document.getElementById('calendar-popover');
                         const events = JSON.parse(e.currentTarget.dataset.events);
                         const day = e.currentTarget.dataset.day;
+                        const monthName = state.calendarDate.toLocaleDateString('th-TH', { month: 'long', year: 'numeric', calendar: 'buddhist' });
                         
-                        let content = `<div class="font-bold mb-2">รายการวันที่ ${day}</div><ul class="space-y-1 text-xs">`;
+                        let content = `<ul class="space-y-2 text-sm">`;
                         events.forEach(event => {
                             const debtor = state.debtors.find(d => d.id === event.debt.debtorId);
-                            const label = event.type === 'due' ? `<span class="text-red-600 font-semibold">[ครบกำหนด]</span>` : `<span class="text-blue-600 font-semibold">[รอบดอกเบี้ย]</span>`;
-                            content += `<li class="flex justify-between"><span>${debtor.name}</span> ${label}</li>`;
+                            const label = event.type === 'due' 
+                                ? `<span class="text-red-600 font-semibold">[ครบกำหนด]</span>` 
+                                : `<span class="text-blue-600 font-semibold">[รอบดอกเบี้ย]</span>`;
+                            content += `
+                                <li class="p-2 border-b">
+                                    <div class="font-bold">${debtor.name}</div>
+                                    <div class="flex justify-between items-center text-gray-600">
+                                        <span>${label} ${event.debt.type}</span>
+                                        <span class="font-semibold">${formatCurrency(calculateDebtDetails(event.debt.id).balance)}</span>
+                                    </div>
+                                </li>`;
                         });
                         content += '</ul>';
-                        popover.innerHTML = content;
-
-                        const rect = e.currentTarget.getBoundingClientRect();
-                        popover.style.left = `${rect.left + window.scrollX}px`;
-                        popover.style.top = `${rect.bottom + window.scrollY + 5}px`;
-                        popover.classList.remove('hidden');
+                        
+                        showCustomModal(`รายการในวันที่ ${day} ${monthName}`, content);
                     });
                 });
-                document.body.addEventListener('click', (e) => {
-                    if (!e.target.closest('.calendar-day-event') && !e.target.closest('#calendar-popover')) {
-                        document.getElementById('calendar-popover')?.classList.add('hidden');
-                    }
-                }, true);
             }
             else if (activeTab === 'debtors') {
                 document.getElementById('debtor-form')?.addEventListener('submit', handleDebtorFormSubmit);
